kubernetes/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: push-deploy
  template:
    metadata:
      labels:
        app: push-deploy
    spec:
      serviceAccountName: push-deploy
      containers:
      - image: push-deploy:latest
        imagePullPolicy: Always
        command: ["python"]
        args: ["push-deploy.py"]
        name: push-deploy
        resources:
          requests:
            memory: "96Mi"
            cpu: "50m"
          limits:
            memory: "256Mi" 
            cpu: "250m"
      imagePullSecrets:
        - name: k8s-reg-key
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
